Fixed image modal overflow

--- a/src/app/components/reusable/image-modal/image-modal.component.css
+++ b/src/app/components/reusable/image-modal/image-modal.component.css
@@ -7,6 +7,7 @@
 
 .image-container img {
     max-width: 100%;
+    height: 60vh;
 }
 
 .dialog-content {
@@ -14,7 +15,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    max-height: 95vh;
+    max-height: 90vh;
     height: fit-content;
 }
 
